meme chose pour l'executable

--- a/pageloula.HTML
+++ b/pageloula.HTML
@@ -3,10 +3,12 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title></title>
     <meta charset="UTF-8">
-   
+  
     <title>Document</title>
+    <link rel="stylesheet" href="body{}.css">
     <link rel="stylesheet" href="index_files/body%7B%7D.css">
     <link rel="stylesheet" href="index_files/css.css">
+    <script src="app.js" defer></script>
     <script src="index_files/c1853e1ea7.js" crossorigin="anonymous"></script><style media="all" id="fa-v4-font-face">/*!
  * Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
