--- a/calculatrice.html
+++ b/calculatrice.html
@@ -33,7 +33,7 @@
             <button data-key="13" class="bouton">=</button>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="calculatrice.js"></script>
 </body>
 
 </html>
