--- a/myproject/index.HTML
+++ b/myproject/index.HTML
@@ -19,7 +19,7 @@
   <div class="wrapper" id="popupWrapper"><span class="icon-close" id="closeIcon"><span class="fa-solid fa-close"></span></span>
     <div class="form-box">
         <h2>Login</h2>
-        <form action="#">
+        <form action="#">s
             <div class="input-box">
                 <span class="fa-solid fa-message"></span>
                 <input type="email" required>
@@ -46,17 +46,17 @@
 
   </div>
   <div class="boucle"> 
-    <div class="glass"  style="--r:-15" data-text="Calculatrice" > 
-    <i class="fa-solid fa-cloud"></i> </div>
+    <div class="glass"  style="--r:-15" data-text="jdhfhdjfh" > 
+    </div>
     <div class="boucle"> 
         <div class="glass"  style="--r: 5" data-text="Horloge" > 
-        <a href="Horloge.html"><i class="fa-solid fa-clock"></i> </div></a>
+        <a href="Horloge.html"><img src="lhorloge.png" alt="horloge" width="150px" height="150px"></div></a>
         <div class="boucle"> 
-            <div  class="glass"  style="--r: 25" data-text="Calendrier" > 
-            <i class="fa-solid fa-pen"></i> </div>
+            <div  class="glass"  style="--r: 25" data-text="contact" > 
+         </div>
             <div class="boucle"> 
                 <div class="glass"  style="--r:-15" data-text="Calculatrice" > 
-               <a href="calculatrice.html"> </a></div>
+               <a href="calculatrice.html"><img src="calculatrice.png" alt="calculatrice" width="150px" height="150px"> </a></div>
   </div>
     
   
