--- a/index.HTML
+++ b/index.HTML
@@ -46,7 +46,8 @@
 
   </div>
   <div class="boucle"> 
-    <div class="glass"  style="--r:-15" data-text="jdhfhdjfh" > 
+    <div class="glass"  style="--r:-15" data-text="applications" > 
+        <a href="enplus.html"><img src="crayon.png" alt="cliquer svp"  width="150px" height="150px"></a>
     </div>
     <div class="boucle"> 
         <div class="glass"  style="--r: 5" data-text="Horloge" > 
