--- a/index.HTML
+++ b/index.HTML
@@ -53,7 +53,7 @@
         <div class="glass"  style="--r: 5" data-text="Horloge" > 
         <a href="Horloge.html"><img src="lhorloge.png" alt="horloge" width="150px" height="150px"></div></a>
         <div class="boucle"> 
-            <div  class="glass"  style="--r: 25" data-text="contact" > 
+            <div  class="glass"  style="--r: 25" data-text="cette page est en panne" > 
          </div>
             <div class="boucle"> 
                 <div class="glass"  style="--r:-15" data-text="Calculatrice" > 
